<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <!--    main activity-->
    <string name="main_title_search">Поиск</string>
    <string name="main_title_media">Медиатека</string>
    <string name="main_title_settings">Настройки</string>

    <!--    settings activity-->
    <string name="settings_title">Настройки</string>
    <string name="settings_theme_switch">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="settings_share_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_share_title">Поделиться ссылкой</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_email_address" translatable="false">artem-sheverdyaev@mail.ru</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <!--    search activity-->
    <string name="search_title">Поиск</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_internet_problem">Проблемы со связью</string>
    <string name="search_internet_problem_additional">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_button_clear_history">Очистить историю</string>
    <string name="search_button_update">Обновить</string>
    <string name="search_track_history_title">Вы искали</string>

    <!--    media_player-->
    <string name="media_player_info_duration">Длительность</string>
    <string name="media_player_info_album">Альбом</string>
    <string name="media_player_info_year">Год</string>
    <string name="media_player_info_genre">Жанр</string>
    <string name="media_player_info_country">Страна</string>
    <string name="media_player_play_progress_start" translatable="false">00:00</string>
    <string name="media_player_botomsheet_title">Добавить в плейлист</string>

    <!--    media_library-->
    <string name="media_favorite_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="playlists">Новый плейлист</string>
    <string name="tab_item1">Избранные треки</string>
    <string name="tab_item2">Плейлисты</string>

    <!--        media_library-->
    <string name="media_library_title">Медиатека</string>

    <!--    new playlist-->
    <string name="new_playlist_button_top_back_title">Новый плейлист</string>
    <string name="add_playlist_edit_text_title">Название*</string>
    <string name="add_playlist_edit_text_description">Описание</string>
    <string name="add_playlist_b_create">Создать</string>
    <string name="add_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="add_playlist_dialog_description">Все несохраненные данные будут потеряны</string>
    <string name="add_playlist_button_cancel">Отмена</string>
    <string name="add_playlist_button_exit">Завершить</string>
    <string name="add_playlist_toast_message">Плейлист %1$s создан</string>
    <string name="media_player_toast_new_track_added">Добавлено в плейлист [%1$s]</string>
    <string name="media_player_toast_old_track">Трек уже добавлен в плейлист [%1$s]</string>
    <string name="playlist_track_count" translatable="false">%1$s %2$s</string>
    <string name="playlist_tracks_total_time" translatable="false">%1$s %2$s</string>
    <string name="material_dialog_positive">Да</string>
    <string name="material_dialog_negative">Нет</string>
    <string name="material_dialog_playlist_title">Хотите удалить трек?</string>
    <string name="playlist_settings_share">Поделиться</string>
    <string name="playlist_settings_edit_information">Редактировать информацию</string>
    <string name="playlist_delete_playlist">Удалить плейлист</string>
    <string name="playlist_share_tracks_empty_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_share_title">Отправить плейлист</string>
    <string name="playlist_delete_dialog_message">Хотите удалить плейлист %1$s?</string>
    <string name="playlist_delete_dialog_title">Удалить плейлист</string>

    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_button_text">Сохранить</string>


    <plurals name="track">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">трека</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>

</resources>