<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.main.ui.fragment.MainFragment"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/main_button_search"
        style="@style/main_button_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_button_margin_bottom"
        android:layout_weight="1"
        android:text="@string/main_title_search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/main_button_media"
        style="@style/main_button_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_button_margin_bottom"
        android:layout_weight="1"
        android:text="@string/main_title_media"
        app:icon="@drawable/ic_media" />

    <Button
        android:id="@+id/main_button_settings"
        style="@style/main_button_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_button_margin_bottom"
        android:layout_weight="1"
        android:text="@string/main_title_settings"
        app:icon="@drawable/ic_settings" />


</LinearLayout>
