<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.playlistmaker.settings.ui.fragment.FragmentSettings"
    android:orientation="vertical">



    <TextView
        android:id="@+id/settings_button_back"
        style="@style/title_top_back"
        android:text="@string/settings_title" />


    <FrameLayout
        style="@style/settings_item_in_the_settings_list"

        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_items_height">

        <TextView
            style="@style/settings_text_in_the_settings_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_theme_switch" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_switch_theme"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_button_share"
        style="@style/settings_item_in_the_settings_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_items_height"
        android:clickable="true">

        <TextView
            style="@style/settings_text_in_the_settings_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_share_app" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/setting_button_write_to_support"
        style="@style/settings_item_in_the_settings_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_items_height">

        <TextView
            style="@style/settings_text_in_the_settings_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_support" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_button_agreement"
        style="@style/settings_item_in_the_settings_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_items_height">

        <TextView
            style="@style/settings_text_in_the_settings_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_agreement" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>
</LinearLayout>
