<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.playlistmaker.search.ui.fragment.FragmentSearch"
    android:orientation="vertical">


    <TextView
        style="@style/title_top_back"
        android:text="@string/search_title"
        android:id="@+id/search_button_back"/>

    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/search_input_line"
            style="@style/search_input_line"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_title"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor"
            android:textFontWeight="400"
            android:textSize="@dimen/secondary_text_size"
            app:drawableStartCompat="@drawable/ic_search_edit_text" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/search_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="18dp"
            android:clickable="true"
            android:paddingHorizontal="12dp"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_tracks_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/track_rv_item"
            tools:visibility="gone" />

        <ProgressBar
            android:indeterminateTint="@color/search_progress_bar_color"
            android:visibility="gone"
            android:id="@+id/search_progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="124dp"
            android:layout_gravity="center_horizontal"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/layout_placeholders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/problem_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="86dp"
            android:visibility="gone"
            tools:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/problem_title"
            style="@style/text400YsMedium19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:visibility="gone"
            tools:text="Проблемы со связью " />

        <TextView
            android:id="@+id/problem_additional_message"
            style="@style/text400YsMedium19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:visibility="gone"
            tools:text="Загрузка не удалась. Проверьте подключение к интернету" />

        <Button
            android:id="@+id/b_update"
            style="@style/pm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/search_button_update"
            android:visibility="gone" />
    </LinearLayout>
    <!--        история запросов-->

    <LinearLayout
        android:id="@+id/layout_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/text500YsMedium19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/search_track_history_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_tracks_history_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:itemCount="10"
            tools:listitem="@layout/track_rv_item" />

        <Button
            android:id="@+id/button_clear_history"
            style="@style/pm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginVertical="16dp"
            android:text="@string/search_button_clear_history" />

    </LinearLayout>

</LinearLayout>